# cpp-2020-integral

./: CMakeLists.txt  calc_integral.cpp  plot_logs.py  readme.md  run_all.sh
configs/: ackley.yaml  de_jong.yaml  langermann.yaml  shubert.yaml
logs/: ackley.csv  baseline.csv  de_jong.csv  langermann.csv  shubert.csv
src/: csv_writer.cpp  csv_writer.h  integral.cpp  integral.h  integral_functions.cpp  integral_functions.h  time_measurement.cpp  time_measurement.h
